# weights-auto-tune-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  feature_names.txt  get_gauc_for_pretrained_model.sh  main.py  noxfile.py  pyproject.toml  queries.sql  run_tune_pipeline.sh
scripts/: get_gauc_for_pretrained_model.sh  run_tune_pipeline.sh
src/: utils.py
src/auto_tune_weights_pipeline/: columns.py  constants.py  event_names.py  events.py  features_pairs_generator.py  logging_config.py  matrix_builder.py  maxtrix_builder.py  ml.py  pool_cache.py  target_config.py  tune.py  types_.py  utils.py
src/auto_tune_weights_pipeline/marimo/: gauc_log_analysis.py
src/auto_tune_weights_pipeline/metrics/: auc_weighted.py  base.py  gauc.py  metric_names.py  utils.py
src/weights_auto_tune_pipeline/: columns.py  constants.py  logging_.py  pool_cache.py  target_config.py  utils.py
src/weights_auto_tune_pipeline/metrics/: base.py  gauc.py  query_auc.py
tests/: conftest.py  test_gauc.py  test_objective.py  test_yt_client.py  test_yt_io.py
tests/data/AUC=0_0/: pool_cache_2026_01_31__3808953996_3934_1769877723930_44275.jsonl  pool_cache_2026_01_31__918960451_4009_1769879722682_60050.jsonl
tests/data/AUC=0_5/: pool_cache_2026_01_31__3000127673_4130_1769889692846_13927.jsonl
tests/data/AUC=1_0/: pool_cache_2026_01_31__1550856805_3971_1769878063144_51518.jsonl  pool_cache_2026_01_31_rid=4209389434_2808_1769884974477_49306.jsonl
tests/data/metrics/gauc/AUC=0_0/: pool_cache_2026_01_31__1972099784_3936_1769880273297_76459.jsonl
tests/data/metrics/gauc/AUC=1_0/: pool_cache_2026_01_31__612205853_3532_1769849263613_98392.jsonl
tests/data/objective/: pool_cache_with_features_2026_02_01_train_5_records.jsonl  pool_cache_with_features_2026_02_02_val_3_records.jsonl  pool_cache_with_features_2026_02_02_val_3_records_with_scores.jsonl
