[project]
name = "weights-auto-tune-pipeline"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.10.0",
    "loguru>=0.7.3",
    "nox>=2025.11.12",
    "numpy>=2.4.2",
    "polars>=1.37.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "typing-extensions>=4.15.0",
    "ytsaurus-client>=0.13.46",
]

[build-system]
requires = ["setuptools>=61.0"]
biuld-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude  = ["tests*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--verbose",
    "--tb=short",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertationError",
    "raise NoImplementatedError",
]
