[project]
name = "auto-tune-weights-pipeline"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "click>=8.3.1",
    "ipython>=9.10.0",
    "loguru>=0.7.3",
    "marimo>=0.19.7",
    "matplotlib>=3.10.8",
    "nox>=2025.11.12",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.2",
    "typing-extensions>=4.15.0",
    "ytsaurus-client>=0.13.46",
]

[build-system]
requires = ["setuptools>=61.0"]
biuld-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude  = ["tests*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--verbose",
    "--tb=short",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:DeprecationWarning",
]
markers = [
    "auc: marks AUC-tests (deselect with '-m \"not auc\"')",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertationError",
    "raise NoImplementatedError",
]
